fix(HomeTopBar.scss): text-align center app label

--- a/src/components/HomeTopBar/HomeTopBar.module.scss
+++ b/src/components/HomeTopBar/HomeTopBar.module.scss
@@ -183,6 +183,7 @@
         font-weight: 900;
         text-transform: uppercase;
         margin-top: 0.6rem;
+        text-align: center;
     }
 
     .avatar_container {
